--- a/esxi/Vagrantfile
+++ b/esxi/Vagrantfile
@@ -15,10 +15,10 @@ servers = [
     :hostname => "master",
     :type => "master",
     :box => BOX_IMAGE,
-    :public_ip => '10.99.120.233',
-    :public_ip_mask => '255.255.255.0',
-    :private_ip => '192.168.1.10',
-    :private_ip_mask => '255.255.255.0',
+    :ip1 => '10.99.120.233',
+    :ip1_mask => '255.255.255.0',
+    :ip2 => '192.168.1.10',
+    :ip2_mask => '255.255.255.0',
     :networks => ['VM Network', 'VM Network', 'InternalNetwork'],
     :mem => '4096',
     :cpu => '4'
@@ -28,10 +28,10 @@ servers = [
     :hostname => "node1",
     :type => "node",
     :box => BOX_IMAGE,
-    :public_ip => '10.99.120.239',
-    :public_ip_mask => '255.255.255.0',
-    :private_ip => '192.168.1.11',
-    :private_ip_mask => '255.255.255.0',
+    :ip1 => '10.99.120.239',
+    :ip1_mask => '255.255.255.0',
+    :ip2 => '192.168.1.11',
+    :ip2_mask => '255.255.255.0',
     :networks => ['VM Network', 'VM Network', 'InternalNetwork'],
     :mem => '2048',
     :cpu => '2'
@@ -41,10 +41,10 @@ servers = [
     :hostname => "node2",
     :type => "node",
     :box => BOX_IMAGE,
-    :public_ip => '10.99.120.242',
-    :public_ip_mask => '255.255.255.0',
-    :private_ip => '192.168.1.12',
-    :private_ip_mask => '255.255.255.0',
+    :ip1 => '10.99.120.242',
+    :ip1_mask => '255.255.255.0',
+    :ip2 => '192.168.1.12',
+    :ip2_mask => '255.255.255.0',
     :networks => ['VM Network', 'VM Network', 'InternalNetwork'],
     :mem => '2048',
     :cpu => '2'
@@ -78,8 +78,8 @@ Vagrant.configure('2') do |config|
       config.vm.box = BOX_IMAGE
       config.vm.hostname = opts[:hostname]
       config.vm.synced_folder('.', '/vagrant', type: 'nfs', disabled: true)
-      config.vm.network 'public_network', ip: opts[:public_ip], netmask: opts[:public_ip_netmask]
-      config.vm.network 'private_network', ip: opts[:private_ip], netmask: opts[:private_ip_netmask]
+      config.vm.network 'private_network', ip: opts[:ip1], netmask: opts[:ip1_mask]
+      config.vm.network 'private_network', ip: opts[:ip2], netmask: opts[:ip2_mask]
       config.vm.provider :vmware_esxi do |esxi|
         esxi.guest_name = opts[:name]
         esxi.guest_memsize = opts[:mem]
