--- a/esxi/Vagrantfile
+++ b/esxi/Vagrantfile
@@ -15,10 +15,10 @@ servers = [
     :hostname => "master",
     :type => "master",
     :box => BOX_IMAGE,
-    :ip1 => '10.99.120.233',
-    :ip1_mask => '255.255.255.0',
-    :ip2 => '192.168.1.10',
-    :ip2_mask => '255.255.255.0',
+    :public_ip => '10.99.120.233',
+    :public_ip_mask => '255.255.255.0',
+    :private_ip => '192.168.1.10',
+    :private_ip_mask => '255.255.255.0',
     :networks => ['VM Network', 'VM Network', 'InternalNetwork'],
     :mem => '4096',
     :cpu => '4'
@@ -28,10 +28,10 @@ servers = [
     :hostname => "node1",
     :type => "node",
     :box => BOX_IMAGE,
-    :ip1 => '10.99.120.239',
-    :ip1_mask => '255.255.255.0',
-    :ip2 => '192.168.1.11',
-    :ip2_mask => '255.255.255.0',
+    :public_ip => '10.99.120.239',
+    :public_ip_mask => '255.255.255.0',
+    :private_ip => '192.168.1.11',
+    :private_ip_mask => '255.255.255.0',
     :networks => ['VM Network', 'VM Network', 'InternalNetwork'],
     :mem => '2048',
     :cpu => '2'
@@ -41,10 +41,10 @@ servers = [
     :hostname => "node2",
     :type => "node",
     :box => BOX_IMAGE,
-    :ip1 => '10.99.120.242',
-    :ip1_mask => '255.255.255.0',
-    :ip2 => '192.168.1.12',
-    :ip2_mask => '255.255.255.0',
+    :public_ip => '10.99.120.242',
+    :public_ip_mask => '255.255.255.0',
+    :private_ip => '192.168.1.12',
+    :private_ip_mask => '255.255.255.0',
     :networks => ['VM Network', 'VM Network', 'InternalNetwork'],
     :mem => '2048',
     :cpu => '2'
@@ -56,9 +56,10 @@ servers = [
 $configureMaster = <<-SCRIPT
   apt-get update
   apt-get install software-properties-common
-  apt-add-repository --yes --update ppa:ansible/ansible
-  apt-get install --yes ansible
   apt-get install --yes python-apt
+  apt-get install --yes python
+  apt-add-repository --yes --update ppa:ansible/ansible
+  DEBIAN_FRONTEND=noninteractive apt-get install -y -qq ansible
 SCRIPT
 $configureNode = <<-SCRIPT
   apt-get update
@@ -78,8 +79,8 @@ Vagrant.configure('2') do |config|
       config.vm.box = BOX_IMAGE
       config.vm.hostname = opts[:hostname]
       config.vm.synced_folder('.', '/vagrant', type: 'nfs', disabled: true)
-      config.vm.network 'private_network', ip: opts[:ip1], netmask: opts[:ip1_mask]
-      config.vm.network 'private_network', ip: opts[:ip2], netmask: opts[:ip2_mask]
+      config.vm.network 'private_network', ip: opts[:public_ip], netmask: opts[:public_ip_mask]
+      config.vm.network 'private_network', ip: opts[:private_ip], netmask: opts[:private_ip_mask]
       config.vm.provider :vmware_esxi do |esxi|
         esxi.guest_name = opts[:name]
         esxi.guest_memsize = opts[:mem]
@@ -96,7 +97,6 @@ Vagrant.configure('2') do |config|
         ip route del default
         ip route add default via 10.99.120.1 dev eth1
       SHELL
-
       #append host pub key
       config .vm.provision "shell" do |s|    
         s.inline = <<-SHELL
@@ -111,13 +111,6 @@ Vagrant.configure('2') do |config|
       #node provision (type depended)
       if opts[:type] == "master"
         config.vm.provision "shell", inline: $configureMaster
-#        if needed run playbook
-#        config.vm.provision "file", source: "./share_content", destination: "$HOME"
-#        config.vm.provision "ansible_local" do |ansible|
-#          ansible.provisioning_path = "/home/vagrant"
-#          ansible.verbose = "v"
-#          ansible.playbook = "playbook.yml"
-#        end
       else
         config.vm.provision "shell", inline: $configureNode
       end
